[package]
name = "ctf-transformers"
version = "0.1.0"
description = "CTF Transformers desktop control app"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[lib]
name = "ctf_transformers_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
opt-level = "s"
lto = true
strip = true
